# Open-Source-Scout

./: .dockerignore  .env.example  .eslintignore  .gitignore  AI_GUIDELINES.md  Dockerfile  README.md  main.py  nixpacks.toml  pyproject.toml  pyrightconfig.json  pytest.ini  railway.json  requirements.txt  run-backend.ps1  skills-lock.json  test_reanalyze.py  test_results.md  uv.lock.bak  verify_agent.py
app/: api.py  auth_routes.py  auth_service.py  db.py  main.py
core/: identity.py  orchestrator.py  schemas.py  scoring.py  terminal_manager.py
docs/: CASCADEFLOW_HINDSIGHT_MAP.md
frontend/: .eslintignore  .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.live.js  tailwind.config.js  vite.config.js
integrations/: github_client.py  groq_client.py
scripts/: cascadeflow_demo.py  full_demo.py  set_github_seo.ps1
tests/: conftest.py  helpers.py  slide_quality.py  test_agent_output_quality.py  test_api_routes.py  test_api_slide_coverage.py  test_archaeologist_module.py  test_beginner_ranking_validation.py  test_cascadeflow_integration.py  test_code_search.py  test_detection_accuracy.py  test_github_client.py  test_gold_standard_localization.py  test_groq_agent_keys.py  test_hindsight_integration.py  test_iterative_qa_loop.py  test_live_api_smoke.py  test_orchestrator_integration.py  test_pathfinder_module.py  test_perfect_live_integration.py  test_pipeline_integration.py  test_ranking_performance.py  test_repo_auditor.py  test_repo_search_memory.py  test_scoring.py  test_senior_dev_module.py  (+3 more)
(+100 files in other folders)
