[project]
name = "open-source-scout"
version = "0.1.0"
description = "AI-powered multi-agent system to help beginners contribute to open-source projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "cascadeflow>=1.1.0",
    "hindsight-client>=0.1.0",
    "httpx>=0.27.0",
    "gitpython>=3.1.40",
    "markdown>=3.5.0",
    "email-validator>=2.1.0",
    "argon2-cffi>=23.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "uvicorn[standard]>=0.32.0",
    "watchdog>=6.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
